# counter-cypher-mode

./: CMakeLists.txt
src/: main.c
